# Project-EVO

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_exe.py  config.json  requirements.txt  setup.sh  swarm_bot.py  test_hivemind.py
.github/workflows/: evolution.yml
cli/: evo_cli.py
evo-core/: Cargo.toml
evo-core/src/: lib.rs
hivemind/: main.py
meta-swarms/: memory.json
sdk/: context_retriever.py  evolution_core.py  htm_core.py  llm_client.py  memory_manager.py  quantum_planner.py  swarm_mesh.py  swarm_orchestrator.py  synaptic_matrix.py
swarms/: registry.json
swarms/agents/: adversary.py  architect.py  auditor.py  coder.py  dashboard.py  meta_optimizer.py  quantum_optimizer.py  tester.py
