[package]
name = "evo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "evo_core"
crate-type = ["cdylib"]
